Fix full-bleed presentation of portrait

--- a/content/assets/form.css
+++ b/content/assets/form.css
@@ -930,6 +930,22 @@ figcaption {
 }
 
 /* -------------------------------------------------------------------------- *
+ * .full-bleed
+ * -------------------------------------------------------------------------- */
+
+.full-bleed img {
+  width: 100%;
+}
+
+@media (min-width: 35.625em) {
+  .full-bleed img {
+    max-width: calc(var(--max-measure) + 2 * var(--min-margin));
+    margin: 0 auto;
+    padding: 0 var(--min-margin);
+  }
+}
+
+/* -------------------------------------------------------------------------- *
  * h1, h2, and h3
  * -------------------------------------------------------------------------- */
 
